# test_data_generator

./: MARKDOWN_PARSER_GUIDE.md  README.md  multi_table.sql  multi_table_config.yaml  multi_table_test.yaml  otd_test_data.yaml  pyproject.toml  requirements.txt  test_functionality.py  test_simple_config.yaml  user_config.yaml  users.csv  users.json  users.sql  users.xlsx
.opencode/: oh-my-opencode.json
docs/: database_schema.md
examples/: basic_usage.py  user_data.yaml
output/: data.xlsx  order_items_data.csv  order_items_data.json  orders_data.csv  orders_data.json  products_data.csv  products_data.json  users_data.csv  users_data.json
src/: __init__.py  cli.py  generator.py  prompts.py  schema_parser.py  template_generator.py
src/config/: parser.py  schema.py
src/fields/: base.py  extended.py
src/test_data_generator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_base_fields.py
